; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/vpninstall/extr_vpninstall.c_ViExtractCabinetFile.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/vpninstall/extr_vpninstall.c_ViExtractCabinetFile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RT_RCDATA = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"CABINET\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ViExtractCabinetFile(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = icmp eq i8* %7, null
  br i1 %8, label %12, label %9

9:                                                ; preds = %2
  %10 = load i8*, i8** %5, align 8
  %11 = icmp eq i8* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %9, %2
  store i32 0, i32* %3, align 4
  br label %31

13:                                               ; preds = %9
  %14 = load i8*, i8** %4, align 8
  %15 = load i32, i32* @RT_RCDATA, align 4
  %16 = call i32* @ViExtractResource(i8* %14, i32 %15, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  store i32* %16, i32** %6, align 8
  %17 = load i32*, i32** %6, align 8
  %18 = icmp eq i32* %17, null
  br i1 %18, label %19, label %20

19:                                               ; preds = %13
  store i32 0, i32* %3, align 4
  br label %31

20:                                               ; preds = %13
  %21 = load i32*, i32** %6, align 8
  %22 = load i8*, i8** %5, align 8
  %23 = call i32 @DumpBuf(i32* %21, i8* %22)
  %24 = icmp eq i32 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %20
  %26 = load i32*, i32** %6, align 8
  %27 = call i32 @FreeBuf(i32* %26)
  store i32 0, i32* %3, align 4
  br label %31

28:                                               ; preds = %20
  %29 = load i32*, i32** %6, align 8
  %30 = call i32 @FreeBuf(i32* %29)
  store i32 1, i32* %3, align 4
  br label %31

31:                                               ; preds = %28, %25, %19, %12
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32* @ViExtractResource(i8*, i32, i8*) #1

declare dso_local i32 @DumpBuf(i32*, i8*) #1

declare dso_local i32 @FreeBuf(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
